[package]
name = "vigenere"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-segmentation = "1.9.0"
unicode-width = "0.1.9"

[dependencies.cursive]
version = "0.18"
default-features = false
features = ["pancurses-backend"]
